[gd_scene load_steps=36 format=3 uid="uid://b8sl2wgrrkl68"]

[ext_resource type="Texture2D" uid="uid://37wn2e31abjk" path="res://assets/items/axeSprites.png" id="1_0tyo2"]
[ext_resource type="Script" path="res://scn/Items/throwable_axe.gd" id="1_k37b8"]
[ext_resource type="Texture2D" uid="uid://fha80xmfmjww" path="res://assets/items/axeThrowAnimation.png" id="2_xd85o"]
[ext_resource type="Theme" uid="uid://ba8h2u1lk5xof" path="res://themes/btnBlack_theme.tres" id="4_kyurq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vk833"]
atlas = ExtResource("1_0tyo2")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6f4a"]
atlas = ExtResource("2_xd85o")
region = Rect2(480, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3t7jx"]
atlas = ExtResource("2_xd85o")
region = Rect2(448, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cnrgn"]
atlas = ExtResource("2_xd85o")
region = Rect2(416, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ek2ea"]
atlas = ExtResource("2_xd85o")
region = Rect2(384, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dyvqw"]
atlas = ExtResource("2_xd85o")
region = Rect2(352, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1sor"]
atlas = ExtResource("2_xd85o")
region = Rect2(480, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2gt86"]
atlas = ExtResource("2_xd85o")
region = Rect2(448, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wgwdj"]
atlas = ExtResource("2_xd85o")
region = Rect2(416, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ibspu"]
atlas = ExtResource("2_xd85o")
region = Rect2(384, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1nrmt"]
atlas = ExtResource("2_xd85o")
region = Rect2(352, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pvuww"]
atlas = ExtResource("2_xd85o")
region = Rect2(320, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l5fvt"]
atlas = ExtResource("2_xd85o")
region = Rect2(288, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hgepu"]
atlas = ExtResource("2_xd85o")
region = Rect2(256, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sq58r"]
atlas = ExtResource("2_xd85o")
region = Rect2(224, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2isrb"]
atlas = ExtResource("2_xd85o")
region = Rect2(192, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t8m63"]
atlas = ExtResource("2_xd85o")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3tj5w"]
atlas = ExtResource("2_xd85o")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_chdgc"]
atlas = ExtResource("2_xd85o")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ucjbd"]
atlas = ExtResource("2_xd85o")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dmejl"]
atlas = ExtResource("2_xd85o")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kaqby"]
atlas = ExtResource("2_xd85o")
region = Rect2(0, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ph57m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vk833")
}],
"loop": false,
"name": &"default",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6f4a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3t7jx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cnrgn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ek2ea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dyvqw")
}],
"loop": false,
"name": &"fall",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1sor")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gt86")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wgwdj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ibspu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1nrmt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvuww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l5fvt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hgepu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sq58r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2isrb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t8m63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3tj5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_chdgc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ucjbd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dmejl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kaqby")
}],
"loop": true,
"name": &"flight",
"speed": 40.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_b3v8w"]
radius = 20.0

[sub_resource type="Animation" id="Animation_7cqsr"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["default"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitArea/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:collision_mask")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [129]
}

[sub_resource type="Animation" id="Animation_82grl"]
resource_name = "fall"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["fall"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:collision_mask")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [129]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitArea/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"fall"
}]
}

[sub_resource type="Animation" id="Animation_1qcwy"]
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.025, 0.05, 0.075, 0.1, 0.125, 0.15, 0.175, 0.2, 0.225, 0.25, 0.275, 0.3, 0.325, 0.35, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["flight"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitArea/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:collision_mask")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [133]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sqha6"]
_data = {
"default": SubResource("Animation_7cqsr"),
"fall": SubResource("Animation_82grl"),
"flight": SubResource("Animation_1qcwy")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_fs6sh"]
radius = 22.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v6q4p"]
size = Vector2(77, 79)

[sub_resource type="CircleShape2D" id="CircleShape2D_dc1tg"]
radius = 24.5153

[node name="ThrowableAxe" type="CharacterBody2D"]
collision_layer = 2048
collision_mask = 129
floor_max_angle = 0.523599
script = ExtResource("1_k37b8")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2.125, 2.125)
sprite_frames = SubResource("SpriteFrames_ph57m")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_b3v8w")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_sqha6")
}
autoplay = "default"

[node name="HitArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
shape = SubResource("CircleShape2D_fs6sh")
disabled = true

[node name="PickArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickArea"]
shape = SubResource("RectangleShape2D_v6q4p")

[node name="WallDetector" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 133

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallDetector"]
shape = SubResource("CircleShape2D_dc1tg")

[node name="EquipLabel" type="Label" parent="."]
visible = false
z_index = 1
offset_left = -19.0
offset_top = -62.0
offset_right = 21.0
offset_bottom = -37.0
theme = ExtResource("4_kyurq")
theme_override_font_sizes/font_size = 22
horizontal_alignment = 1

[node name="Sounds" type="AudioStreamPlayer" parent="."]
bus = &"Sfx"

[connection signal="area_entered" from="HitArea" to="." method="_on_hit_area_area_entered"]
[connection signal="body_entered" from="PickArea" to="." method="_on_pick_area_body_entered"]
[connection signal="body_exited" from="PickArea" to="." method="_on_pick_area_body_exited"]
[connection signal="body_entered" from="WallDetector" to="." method="_on_wall_detector_body_entered"]
